creation of individual time blocks

--- a/index.html
+++ b/index.html
@@ -30,6 +30,60 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
+      <section id="hour-nine" class="row time-block">
+        <div class="col-md-1 hour">9A.M.</div>
+        <textarea class="col-md-10 information"></textarea>
+        <buttonclass="btn saveBtn col-md-1><i class="far fa-save"
+        style="font-size:36px;"></i></button>
+      </section>
+      <section id="hour-nine" class="row time-block">
+        <div class="col-md-1 hour">10A.M.</div>
+        <textarea class="col-md-10 information"></textarea>
+        <buttonclass="btn saveBtn col-md-1><i class="far fa-save"
+        style="font-size:36px;"></i></button>
+      </section>
+      <section id="hour-nine" class="row time-block">
+        <div class="col-md-1 hour">11A.M.</div>
+        <textarea class="col-md-10 information"></textarea>
+        <buttonclass="btn saveBtn col-md-1><i class="far fa-save"
+        style="font-size:36px;"></i></button>
+      </section>
+      <section id="hour-nine" class="row time-block">
+        <div class="col-md-1 hour">12P.M.</div>
+        <textarea class="col-md-10 information"></textarea>
+        <buttonclass="btn saveBtn col-md-1><i class="far fa-save"
+        style="font-size:36px;"></i></button>
+      </section>
+      <section id="hour-nine" class="row time-block">
+        <div class="col-md-1 hour">1P.M.</div>
+        <textarea class="col-md-10 information"></textarea>
+        <buttonclass="btn saveBtn col-md-1><i class="far fa-save"
+        style="font-size:36px;"></i></button>
+      </section>
+      <section id="hour-nine" class="row time-block">
+        <div class="col-md-1 hour">2P.M.</div>
+        <textarea class="col-md-10 information"></textarea>
+        <buttonclass="btn saveBtn col-md-1><i class="far fa-save"
+        style="font-size:36px;"></i></button>
+      </section>
+      <section id="hour-nine" class="row time-block">
+        <div class="col-md-1 hour">3P.M.</div>
+        <textarea class="col-md-10 information"></textarea>
+        <buttonclass="btn saveBtn col-md-1><i class="far fa-save"
+        style="font-size:36px;"></i></button>
+      </section>
+      <section id="hour-nine" class="row time-block">
+        <div class="col-md-1 hour">4P.M.</div>
+        <textarea class="col-md-10 information"></textarea>
+        <buttonclass="btn saveBtn col-md-1><i class="far fa-save"
+        style="font-size:36px;"></i></button>
+      </section>
+      <section id="hour-nine" class="row time-block">
+        <div class="col-md-1 hour">5P.M.</div>
+        <textarea class="col-md-10 information"></textarea>
+        <buttonclass="btn saveBtn col-md-1><i class="far fa-save"
+        style="font-size:36px;"></i></button>
+      </section>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
