creation of name element for every section

--- a/index.html
+++ b/index.html
@@ -30,55 +30,55 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
-      <section id="hour-nine" class="row time-block">
+      <section id="hour-nine" name="9" class="row time-block">
         <div class="col-md-1 hour">9A.M.</div>
         <textarea class="col-md-10 information"></textarea>
         <button class="btn saveBtn col-md-1"><i class="far fa-save"
         style="font-size:36px;"></i></button>
       </section>
-      <section id="hour-ten" class="row time-block">
+      <section id="hour-ten" name="10" class="row time-block">
         <div class="col-md-1 hour">10A.M.</div>
         <textarea class="col-md-10 information"></textarea>
         <button class="btn saveBtn col-md-1"><i class="far fa-save"
         style="font-size:36px;"></i></button>
       </section>
-      <section id="hour-eleven" class="row time-block">
+      <section id="hour-eleven" name="11" class="row time-block">
         <div class="col-md-1 hour">11A.M.</div>
         <textarea class="col-md-10 information"></textarea>
         <button class="btn saveBtn col-md-1"><i class="far fa-save"
         style="font-size:36px;"></i></button>
       </section>
-      <section id="hour-twelve" class="row time-block">
+      <section id="hour-twelve"  name="12" class="row time-block">
         <div class="col-md-1 hour">12P.M.</div>
         <textarea class="col-md-10 information"></textarea>
         <button class="btn saveBtn col-md-1"><i class="far fa-save"
         style="font-size:36px;"></i></button>
       </section>
-      <section id="hour-thirteen" class="row time-block">
+      <section id="hour-thirteen" name="13" class="row time-block">
         <div class="col-md-1 hour">1P.M.</div>
         <textarea class="col-md-10 information"></textarea>
         <button class="btn saveBtn col-md-1"><i class="far fa-save"
         style="font-size:36px;"></i></button>
       </section>
-      <section id="hour-fourteen" class="row time-block">
+      <section id="hour-fourteen" name="14" class="row time-block">
         <div class="col-md-1 hour">2P.M.</div>
         <textarea class="col-md-10 information"></textarea>
         <button class="btn saveBtn col-md-1"><i class="far fa-save"
         style="font-size:36px;"></i></button>
       </section>
-      <section id="hour-fifteen" class="row time-block">
+      <section id="hour-fifteen"  name="15" class="row time-block">
         <div class="col-md-1 hour">3P.M.</div>
         <textarea class="col-md-10 information"></textarea>
         <button class="btn saveBtn col-md-1"><i class="far fa-save"
         style="font-size:36px;"></i></button>
       </section>
-      <section id="hour-sixteen" class="row time-block">
+      <section id="hour-sixteen" name="16" class="row time-block">
         <div class="col-md-1 hour">4P.M.</div>
         <textarea class="col-md-10 information"></textarea>
         <button class="btn saveBtn col-md-1"><i class="far fa-save"
         style="font-size:36px;"></i></button>
       </section>
-      <section id="hour-seventeen" class="row time-block">
+      <section id="hour-seventeen" name="17" class="row time-block">
         <div class="col-md-1 hour">5P.M.</div>
         <textarea class="col-md-10 information"></textarea>
         <button class="btn saveBtn col-md-1"><i class="far fa-save"
